--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<h1>工藤優馬の<br />
+						ポートフォリオ</h1>
+						<p>Unity / c# / プログラマー志望</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Yuma Kudo</a>
 					</header>
 
 				<!-- Nav -->
@@ -53,34 +52,30 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
-								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
-								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
+							    <header class="major">
+							        <h2><a href="#">GOOOOLEM</a></h2>
+							        <p>東京ゲームショウ展示作品<br>
+							        モンスター・人間キャラクターの一部プログラム、大砲のプログラム、一部ドット絵、一部SE、企画、バランス調整</p>
+							    </header>
+							    <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+							    <ul class="actions special">
+							        <li><a href="game1.html" class="button large">詳細を見る</a></li>
+							    </ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
 								<article>
-									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+							        <header>
+							            <h2><a href="#">作品名：〇〇</a></h2>
+							        </header>
+							        <a href="#" class="image fit"><img src="images/game2.png" alt="" /></a>
+							        <p>Unityで制作した2Dアクション。AI・UI・演出を担当。</p>
+							        <ul class="actions special">
+							            <li><a href="game2.html" class="button">詳細を見る</a></li>
+							        </ul>
+							    </article>
+
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
@@ -226,4 +221,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
