--- a/game1.html
+++ b/game1.html
@@ -38,7 +38,8 @@
         </ul>
 
         <h2>プレイ動画</h2>
-        <p>https://youtu.be/kgSB-JxukfI</p>
+         <p><a href="https://youtu.be/kgSB-JxukfI">
+          
 
         <h2>GitHub</h2>
         <p><a href="https://github.com/yuma-kudo0721/KudoYuma_UnityProject_GOOOOLEM">
