--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>工藤優馬 | ポートフォリオ</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">制作作品</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
@@ -55,7 +55,9 @@
 							    <header class="major">
 							        <h2><a href="#">GOOOOLEM</a></h2>
 							        <p>東京ゲームショウ展示作品<br>
-							        モンスター・人間キャラクターの一部プログラム、大砲のプログラム、一部ドット絵、一部SE、企画、バランス調整</p>
+							        担当：モンスター・人間キャラクターの一部プログラム、大砲のプログラム、一部ドット絵、一部SE、企画、バランス調整<br>
+									パズルでモンスターを召喚して戦う対戦型パズルゲーム<br>
+									</p>
 							    </header>
 							    <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 							    <ul class="actions special">
@@ -223,3 +225,4 @@
 	</body>
 
 </html>
+
