--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									パズルでモンスターを召喚して戦う対戦型パズルゲーム<br>
 									</p>
 							    </header>
-							    <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+							    <a href="#" class="image main"><img src="images/GOOOOLEMImage.png" alt="" /></a>
 							    <ul class="actions special">
 							        <li><a href="game1.html" class="button large">詳細を見る</a></li>
 							    </ul>
@@ -225,4 +225,5 @@
 	</body>
 
 </html>
+
 
