--- a/game1.html
+++ b/game1.html
@@ -15,26 +15,32 @@
             <p>東京ゲームショウ展示作品</p>
         </header>
 
-        <span class="image fit"><img src="images/pic01.jpg" alt=""></span>
+        <span class="image fit"><img src="images/GOOOOLEMImage.png" alt=""></span>
 
         <h2>ゲーム概要</h2>
         <p>パズルでモンスターを召喚して戦う対戦型パズルゲーム。</p>
 
+        <h2>開発期間</h2>
+        <p>2025年4月18日 ～ 2025年9月29日</p>
+
+        <h2>チーム</h2>
+        <p>二人</p>
+
         <h2>担当範囲</h2>
         <ul>
-            <li>モンスターAIの一部実装</li>
-            <li>人間キャラクターの挙動プログラム</li>
+            <li>モンスターのプログラム一部実装</li>
+            <li>人間キャラクターの一部プログラム</li>
             <li>大砲ギミックのプログラム</li>
             <li>一部ドット絵制作</li>
             <li>一部SE制作</li>
             <li>企画・バランス調整</li>
         </ul>
 
-        <h2>技術的こだわり</h2>
+        <h2>こだわり</h2>
         <ul>
-            <li>ノックバック処理を調整し、爽快感を強化</li>
-            <li>敵AIの行動パターンを複数用意し単調さを排除</li>
-            <li>展示会でのフィードバックを元にUIと難易度を改善</li>
+            <li>大砲の反動の挙動など細かい演出をプログラムで再現</li>
+            <li>単純さと戦略性を両立させたゲーム性</li>
+            <li>コストの低いキャラクターでも活躍の場面がある</li>
         </ul>
 
         <h2>プレイ動画</h2>
