--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 							<section class="posts">
 								<article>
 							        <header>
-							            <h2><a href="#">作品名：〇〇</a></h2>
+							            <h2><a href="#">金魚すくい</a></h2>
 							        </header>
-							        <a href="#" class="image fit"><img src="images/game2.png" alt="" /></a>
-							        <p>Unityで制作した2Dアクション。AI・UI・演出を担当。</p>
+							        <a href="#" class="image fit"><img src="images/GoldenFishImage.png" alt="" /></a>
+							        <p>Unityで制作したトップダウン2Dアクションゲーム。個人製作</p>
 							        <ul class="actions special">
 							            <li><a href="game2.html" class="button">詳細を見る</a></li>
 							        </ul>
@@ -241,6 +241,7 @@
 	</body>
 
 </html>
+
 
 
 
