--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 							        </header>
 							        <a href="#" class="image fit"><img src="images/GoldenFishImage.png" alt="" /></a>
 							        <p>Unityで個人で制作したトップダウン2Dアクションゲーム。<br>
-										魚をポイですくうことで制限時間を延ばし、ハイスコアを目指すゲームです。<br>
+										魚をポイですくうことで制限時間を延ばし<br>
+										ハイスコアを目指すゲームです。<br>
 										さまざまな種類の魚が登場し、それぞれ異なる行動や特徴を持っています。<br>
 									</p>
 							        <ul class="actions special">
@@ -244,6 +245,7 @@
 	</body>
 
 </html>
+
 
 
 
