--- a/index.html
+++ b/index.html
@@ -87,17 +87,20 @@
 							    </article>
 
 								<article>
-									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+							        <header>
+							            <h2><a href="#">Onちゃんのまちがいさがしゲーム</a></h2>
+							        </header>
+							        <a href="#" class="image fit"><img src="images/OnchanImage.png" alt="" /></a>
+							        <p>HTB秋の大感謝祭で展示した間違い探しゲーム<br>
+										間違いを見つけた数を競うゲームです。<br>
+										様々なパターンの問題があります。<br>
+										イラストは全部で30種類です。<br>
+										展示当日は約１０００人のお客様が来場してくれました。<br>
+									</p>
+							        <ul class="actions special">
+							            <li><a href="game2.html" class="button">詳細を見る</a></li>
+							        </ul>
+							    </article>
 								<article>
 									<header>
 										<span class="date">April 18, 2017</span>
@@ -245,6 +248,7 @@
 	</body>
 
 </html>
+
 
 
 
