--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 								<article>
 							        <header>
-							            <h2><a href="#">Onちゃんのまちがいさがしゲーム</a></h2>
+							            <h2><a href="#">Onちゃんの間違い探しゲーム</a></h2>
 							        </header>
 							        <a href="#" class="image fit"><img src="images/OnchanImage.png" alt="" /></a>
 							        <p>HTB秋の大感謝祭で展示した間違い探しゲーム<br>
@@ -248,6 +248,7 @@
 	</body>
 
 </html>
+
 
 
 
