--- a/game2.html
+++ b/game2.html
@@ -18,27 +18,24 @@
         <span class="image fit"><img src="images/GoldenFishImage.png" alt=""></span>
 
         <h2>ゲーム概要</h2>
-        <p1>魚を掬ってハイスコアを目指すトップダウン2Dアクションゲームです。<br>
+        <p>魚を掬ってハイスコアを目指すトップダウン2Dアクションゲームです。<br>
             魚をポイで掬うことで制限時間を延ばすことができて魚の種類によって伸びる時間が変わります。<br>
 			さまざまな種類の魚が登場し、それぞれ異なる行動や特徴を持っています。<br>
-            妨害する魚をいかに素早く掬うかが高得点のカギになります<br>
-        </p1>
+            妨害する魚をいかに素早く掬うかが高得点のカギになります。
+        </p>
 
         <h2>開発期間</h2>
         <p>2025年5月 ～ 2025年8月12日</p>
-
-        <h2>個人製作</h2>
-
         
         <h2>こだわり</h2>
-        <p1>
+        <p>
           本作では、単に金魚をすくうだけでなく「本物の金魚すくいらしさ」と「ゲームとしての気持ちよさ」の両立にこだわりました。</br>
           魚ごとに行動パターンや速度、当たり判定を変え、金魚は予測しやすく、イカやサメなどの特殊な魚はリスクとリターンがはっきりするよう設計しています。</br>
           特に魚の挙動はクラス設計で共通化し、新しい魚を追加しやすい構造にしました。</br>
           また、魚を即座に消去せず画面外へ移動させてから削除することで、突然消える違和感をなくし、自然な体験になるよう工夫しました。</br>
           FEVERゲージや制限時間の延長といったシステムも、「上手くすくえた時の高揚感」が連続するよう調整を重ねています。</br>
           短時間でも盛り上がるゲームテンポを意識しました。</br>
-        </p1>  
+        </p>  
 
         <h2>プレイ動画</h2>
         <p><a href="https://youtu.be/-i0P4mB4Rvk">YouTubeで見る</a></p>
