--- a/game2.html
+++ b/game2.html
@@ -29,11 +29,12 @@
         
         <h2>こだわり</h2>
         <p>
-          本作では、単に金魚をすくうだけでなく「本物の金魚すくいらしさ」と「ゲームとしての気持ちよさ」の両立にこだわりました。</br>
-          魚ごとに行動パターンや速度、当たり判定を変え、金魚は予測しやすく、イカやサメなどの特殊な魚はリスクとリターンがはっきりするよう設計しています。</br>
-          特に魚の挙動はクラス設計で共通化し、新しい魚を追加しやすい構造にしました。</br>
-          また、魚を即座に消去せず画面外へ移動させてから削除することで、突然消える違和感をなくし、自然な体験になるよう工夫しました。</br>
-          FEVERゲージや制限時間の延長といったシステムも、「上手くすくえた時の高揚感」が連続するよう調整を重ねています。</br>
+          本作では、単に金魚をすくうだけでなく「本物の金魚すくいらしさ」と「ゲームとしての気持ちよさ」の両立にこだわりました。<br>
+          魚ごとに行動パターンや速度、当たり判定を変え、金魚は予測しやすく、イカやサメなどの特殊な魚は<br>
+		  リスクとリターンがはっきりするよう設計しています。<br>
+          特に魚の挙動はクラス設計で共通化し、新しい魚を追加しやすい構造にしました。<br>
+          また、魚を即座に消去せず画面外へ移動させてから削除することで、突然消える違和感をなくし、自然な体験になるよう工夫しました。<br>
+          FEVERゲージや制限時間の延長といったシステムも、「上手くすくえた時の高揚感」が連続するよう調整を重ねています。<br>
           短時間でも盛り上がるゲームテンポを意識しました。</br>
         </p>  
 
