--- a/game2.html
+++ b/game2.html
@@ -26,7 +26,7 @@
         </span>
 
         <!-- スクリーンショット（スライダー） -->
-        <h2>スクリーンショット</h2>
+        <h2>ゲーム画面</h2>
 
         <div class="swiper">
             <div class="swiper-wrapper">
