--- a/game2.html
+++ b/game2.html
@@ -48,7 +48,9 @@
         </div>
 
         <!-- ゲーム概要 -->
-        <h2>ゲーム概要</h2>
+        <div class="game-overview">
+          <h2>ゲーム概要</h2>
+        </div>
         <p>
             魚を掬ってハイスコアを目指すトップダウン型2Dアクションゲームです。<br>
             魚をポイで掬うことで制限時間を延ばすことができ、魚の種類によって延長される時間が変わります。<br>
