--- a/game2.html
+++ b/game2.html
@@ -31,13 +31,13 @@
         <div class="swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="images/pic01.jpg" alt="通常プレイ画面">
+                    <img src="images/GoldenFish3.png" alt="Title">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/pic02.jpg" alt="妨害魚が増える場面">
+                    <img src="images/GoldenFish2" alt="FEVER">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/pic03.jpg" alt="FEVER発動中">
+                    <img src="images/GoldenFish1" alt="妨害">
                 </div>
             </div>
 
