--- a/game2.html
+++ b/game2.html
@@ -34,10 +34,10 @@
                     <img src="images/GoldenFish3.png" alt="Title">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/GoldenFish2" alt="FEVER">
+                    <img src="images/GoldenFish2.png" alt="FEVER">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/GoldenFish1" alt="妨害">
+                    <img src="images/GoldenFish1.png" alt="妨害">
                 </div>
             </div>
 
