--- a/game1.html
+++ b/game1.html
@@ -22,7 +22,7 @@
 
         <!-- メインビジュアル -->
         <span class="image fit">
-            <img src="images/GOOOOLEMImage.png alt="GOOOOLEM メインビジュアル">
+            <img src="images/GOOOOLEMImage.png" alt="GOOOOLEM メインビジュアル">
         </span>
 
         <!-- スクリーンショット（スライダー） -->
@@ -31,13 +31,13 @@
         <div class="swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="images/GoldenFish3.png" alt="Title">
+                    <img src="images/GOOOOLEM1.png" alt="Title">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/GoldenFish2.png" alt="FEVER">
+                    <img src="images/GOOOOLEM2.png" alt="FEVER">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/GoldenFish1.png" alt="妨害">
+                    <img src="images/GOOOOLEM3.png" alt="妨害">
                 </div>
             </div>
 
@@ -61,34 +61,44 @@
             単純なゲーム性でも戦略の幅があるのが魅力のゲームです。
         </p>
 
+        <h2>開発背景</h2>
+        <p>
+            東京ゲームショウでの展示を目的として、来場者が短時間でも直感的に楽しめるオリジナルゲームを制作しました。<br>
+            初見のユーザーが多い展示環境を想定し、シンプルな操作でありながら戦略性のあるゲーム体験を目指しました。<br>
+
+        </p>
+
         <h2>開発期間</h2>
         <p>2025年4月18日 ～ 2025年9月29日</p>
 
+        <h2>チーム</h2>
+        <p>2人</p>
+
         <h2>こだわり</h2>
         <p>
-            本作では、単に金魚をすくうだけでなく
-            「本物の金魚すくいらしさ」と「ゲームとしての気持ちよさ」の両立にこだわりました。<br>
-            魚ごとに行動パターンや速度、当たり判定を変え、
-            金魚は予測しやすく、イカやサメなどの特殊な魚は
-            リスクとリターンがはっきりするよう設計しています。<br>
-            特に魚の挙動はクラス設計で共通化し、新しい魚を追加しやすい構造にしました。<br>
-            また、魚を即座に消去せず画面外へ移動させてから削除することで、
-            突然消える違和感をなくし、自然な体験になるよう工夫しました。<br>
-            FEVERゲージや制限時間の延長といったシステムも、
-            「上手くすくえた時の高揚感」が連続するよう調整を重ねています。<br>
-            短時間でも盛り上がるゲームテンポを意識しました。
+            開発初期のプロトタイプでは、キャラクターが出現して殴り合うだけで、戦略性やゲーム性に乏しい状態でした。<br>
+            そこで相方と何度も話し合い、少しずつルールや要素を追加してゲーム性を改善しました。<br>
+            本作では、パズルでピースを消すことでモンスターを召喚する仕組みを採用し、消したピースの数やソウルによって召喚されるモンスターが決まります。<br>
+            特定のピースを狙って消すことで、状況に応じたモンスターをピンポイントで召喚する必要があり、そこで戦略性を生み出しました。<br>
+            スライムはソウル1つで召喚される低コストのモンスターのため、複数ソウルで生成される「亜種モンスター」を作れない制約がありました。<br>
+            そこで代替案として、一定確率でメタルスライムが生成される仕組みを実装し、低コストのスライムにも希少性や期待感を持たせました。<br>
+            メタルスライムは通常モンスターと異なるダメージ処理を持ち、出現時に戦況が変化しやすく、プレイヤー体験の幅を広げています。<br>
+            さらにモンスター一体一体の能力を考案し、繰り返しテストプレイで攻撃力や移動速度などを調整。勝敗や使用感を基準に数値を見直し、<br>
+            運要素を残しつつ実力が反映されやすいバランスにしました。<br>
+            大砲ギミックでは発射時の反動を再現し、挙動だけでなく視覚的にも分かりやすい演出を意識しました。<br>
+            この開発を通して、試行錯誤でゲームの面白さを磨き上げ、チームで改善する重要性を学びました。<br>
         </p>
 
         <h2>プレイ動画</h2>
         <p>
-            <a href="https://youtu.be/-i0P4mB4Rvk" target="_blank" rel="noopener">
+            <a href="https://www.youtube.com/watch?v=kgSB-JxukfI" target="_blank" rel="noopener">
                 YouTubeで見る
             </a>
         </p>
 
         <h2>GitHub</h2>
         <p>
-            <a href="https://github.com/yuma-kudo0721/KudoYuma_UnityProject_GoldenFish"
+            <a href="https://github.com/yuma-kudo0721/KudoYuma_UnityProject_GOOOOLEM"
                target="_blank" rel="noopener">
                 UnityプロジェクトのGitHubリポジトリはこちら
             </a>
