--- a/game1.html
+++ b/game1.html
@@ -78,7 +78,8 @@
         <p>
             開発初期のプロトタイプでは、キャラクターが出現して殴り合うだけで、戦略性やゲーム性に乏しい状態でした。<br>
             そこで相方と何度も話し合い、少しずつルールや要素を追加してゲーム性を改善しました。<br>
-            本作では、パズルでピースを消すことでモンスターを召喚する仕組みを採用し、消したピースの数やソウルによって召喚されるモンスターが決まります。<br>
+            本作では、パズルでピースを消すことでモンスターを召喚する仕組みを採用し、<br>
+            消したピースの数やソウルによって召喚されるモンスターが決まります。<br>
             特定のピースを狙って消すことで、状況に応じたモンスターをピンポイントで召喚する必要があり、そこで戦略性を生み出しました。<br>
             スライムはソウル1つで召喚される低コストのモンスターのため、複数ソウルで生成される「亜種モンスター」を作れない制約がありました。<br>
             そこで代替案として、一定確率でメタルスライムが生成される仕組みを実装し、低コストのスライムにも希少性や期待感を持たせました。<br>
