--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 							        <p>Unityで個人で制作したトップダウン2Dアクションゲーム。<br>
 										魚をポイですくうことで制限時間を延ばし<br>
 										ハイスコアを目指すゲームです。<br>
-										さまざまな種類の魚が登場し、それぞれ異なる行動や特徴を持っています。<br>
+										さまざまな種類の魚が登場し、<br>
+										それぞれ異なる行動や特徴を持っています。
 									</p>
 							        <ul class="actions special">
 							            <li><a href="game2.html" class="button">詳細を見る</a></li>
@@ -91,11 +92,12 @@
 							            <h2><a href="#">Onちゃんの間違い探しゲーム</a></h2>
 							        </header>
 							        <a href="#" class="image fit"><img src="images/OnchanImage.png" alt="" /></a>
-							        <p>HTB秋の大感謝祭で展示した間違い探しゲーム<br>
-										間違いを見つけた数を競うゲームです。<br>
-										様々なパターンの問題があります。<br>
-										イラストは全部で30種類です。<br>
-										展示当日は約１０００人のお客様が来場してくれました。<br>
+							        <p>
+									  HTB秋の大感謝祭で展示した間違い探しゲームです。<br>
+									  複数のイラストから間違いを見つけ、その数を競います。<br>
+									  問題はさまざまなパターンを用意しています。<br>
+									  イラストは全30種類を制作しました。<br>
+									  展示当日は約1,000人のお客様にご来場いただきました。
 									</p>
 							        <ul class="actions special">
 							            <li><a href="game2.html" class="button">詳細を見る</a></li>
@@ -248,6 +250,7 @@
 	</body>
 
 </html>
+
 
 
 
