--- a/game3.html
+++ b/game3.html
@@ -52,35 +52,32 @@
           <h2>ゲーム概要</h2>
         </div>
         <p>
-            本作『GOOOLEM』は、パズルでモンスターを召喚して戦う対戦型パズルゲームです。<br>
-            ピースとソウルを組み合わせてモンスターを召喚し、相手の城を攻めます。<br>
-            シングルプレイでは、レベルが上がり続ける勇者パーティーをどこまで耐えられるかに挑戦します。<br>
-            マルチプレイでは2人対戦で互いにモンスターを召喚し合い、相手の城のHPを0にした方が勝利となります。<br>
-            東京ゲームショウでの展示を想定して制作を開始し、<br>
-            テストプレイを通してキャラクター性能や挙動のバランス調整を行いました。<br>
-            単純なゲーム性でも戦略の幅があるのが魅力のゲームです。
+            このゲームは、似ている絵の違いを探して見つけた間違いの数を競う間違い探しゲームです。<br>
+            一部の問題には、絵の一部分が出たり消えたりする仕掛けがあり、最後にはランキングに反映されます。<br>
+            HTB秋の大感謝祭では、３日間で約1000人の来場者に遊んでもらいました。
         </p>
 
         <h2>開発背景</h2>
         <p>
           HTB秋の大感謝祭での展示を目的に、短時間で遊べて、家族連れやお子様でも楽しめるようにゲームをデザインしました。<br>
           来場者の多くがお子様であることを想定し、操作やルールはできるだけシンプルにし、<br>
-          直感的に楽しめる内容を意識しています。<br>
+          直感的に楽しめる内容を意識しています。
         </p>
 
         <h2>開発期間</h2>
         <p>2025年5月〜2025年9月21日</p>
 
         <h2>チーム</h2>
-        <p>2人</p>
+        <p>4人</p>
 
          <h2>担当</h2>
         <p>ゲームロジック・ランキング機能・UI調整など、実装全般</p>
 
         <h2>こだわり</h2>
         <p>
-           本作では、展示イベントで初めて触れる来場者でも迷わず楽しめる体験を重視し、プログラム面とデザイン面の両方で工夫を行いました。<br>
-        　 タイトル画面では TMP_InputField を用いてプレイヤー名の入力を受け付け、未入力の場合は「名無し1、2…」と自動生成する仕組みを実装しています。<br>
+            本作では、展示イベントで初めて触れる来場者でも迷わず楽しめる体験を重視し、プログラム面とデザイン面の両方で工夫を行いました。<br>
+        　  タイトル画面では TMP_InputField を用いてプレイヤー名の入力を受け付け、<br>
+            未入力の場合は「名無し1、2…」と自動生成する仕組みを実装しています。<br>
             入力文字数は6文字に制限し、データは PlayerPrefs に保存することで、手軽かつ確実な管理を行いました。<br>
             ランキング機能はオフライン環境での展示を想定し、サーバを使わず PlayerPrefs のみで実装しています。<br>
             ゲーム終了時にスコアを保存し、過去スコアと比較して高い方のみを保持することで、<br>
@@ -88,7 +85,7 @@
             また、スコア更新がリアルタイムでUIに反映されるようにし、達成感や競争意識を高めています。<br>
             デザイン・演出面では、家族連れやお子様が多いイベントでの展示であったため、文章はできるだけ漢字を使わず構成し、<br>
             直感的に理解できる表現を意識しました。さらに、onちゃんのブランドイメージを損なわないよう、セリフは公式設定に忠実に再現し、<br>
-            全体のデザインもお子様の目を引く、かわいらしいトーンで統一しています。<br>
+            全体のデザインもお子様の目を引く、かわいらしいトーンで統一しています。
         </p>
 
         <h2>プレイ動画</h2>
