--- a/game3.html
+++ b/game3.html
@@ -71,7 +71,7 @@
         <p>2025年5月〜2025年9月21日</p>
 
         <h2>チーム</h2>
-        <p>4人</p>
+        <p>4人（企画・案出しはチームメンバー、実装は自分が担当）</p>
 
          <h2>担当</h2>
         <p>ゲームロジック・ランキング機能・UI調整など、実装全般</p>
