--- a/game1.html
+++ b/game1.html
@@ -74,6 +74,9 @@
         <h2>チーム</h2>
         <p>2人</p>
 
+        <h2>担当</h2>
+        <p>モンスター・人間キャラクターの一部プログラム、大砲のプログラム、一部ドット絵、一部SE、企画、バランス調整</p>
+
         <h2>こだわり</h2>
         <p>
             開発初期のプロトタイプでは、キャラクターが出現して殴り合うだけで、戦略性やゲーム性に乏しい状態でした。<br>
