--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 							    <header class="major">
 							        <h2><a href="#">GOOOOLEM</a></h2>
 							        <p>東京ゲームショウ展示作品<br>
-							        担当：モンスター・人間キャラクターの一部プログラム、大砲のプログラム、一部ドット絵、一部SE、企画、バランス調整<br>
 							        パズルでモンスターを召喚して戦う対戦型パズルゲーム<br>
+									単純なゲーム性でも戦略の幅があるのが魅力のゲームです。
 							        </p>
 							    </header>
 							
@@ -250,6 +250,7 @@
 	</body>
 
 </html>
+
 
 
 
