--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 								<article>
 							        <header>
 							            <h2><a href="#">金魚すくい</a></h2>
+										<p>個人製作</p>
 							        </header>
 							        <a href="#" class="image fit"><img src="images/GoldenFishImage.png" alt="" /></a>
 							        <p>Unityで個人で制作したトップダウン2Dアクションゲーム。<br>
@@ -90,6 +91,7 @@
 								<article>
 							        <header>
 							            <h2><a href="#">Onちゃんの間違い探しゲーム</a></h2>
+										<p>HTB秋の大感謝祭展示作品</p>
 							        </header>
 							        <a href="#" class="image fit"><img src="images/OnchanImage.png" alt="" /></a>
 							        <p>
@@ -250,6 +252,7 @@
 	</body>
 
 </html>
+
 
 
 
