--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<!-- Posts -->
 							<section class="posts">
 								<article>
-							        <header>
+							        <header class="major">
 							            <h2><a href="#">金魚すくい</a></h2>
 										<p>個人製作</p>
 							        </header>
@@ -252,6 +252,7 @@
 	</body>
 
 </html>
+
 
 
 
