--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							    </article>
 
 								<article>
-							        <header>
+							        <header class="major">
 							            <h2><a href="#">Onちゃんの間違い探しゲーム</a></h2>
 										<p>HTB秋の大感謝祭展示作品</p>
 							        </header>
@@ -252,6 +252,7 @@
 	</body>
 
 </html>
+
 
 
 
