--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							            <h2><a href="#">金魚すくい</a></h2>
 										<p>個人製作</p>
 							        </header>
-							        <a href="#" class="image fit"><img src="images/GoldenFishImage.png" alt="" /></a>
+							        <a href="#" class="image fit"><img src="images/GoldenFish3.png" alt="" /></a>
 							        <p>Unityで個人で制作したトップダウン2Dアクションゲーム。<br>
 										魚をポイですくうことで制限時間を延ばし<br>
 										ハイスコアを目指すゲームです。<br>
@@ -252,6 +252,7 @@
 	</body>
 
 </html>
+
 
 
 
