--- a/game2.html
+++ b/game2.html
@@ -22,7 +22,7 @@
 
         <!-- メインビジュアル -->
         <span class="image fit">
-            <img src="images/GoldenFishImage.png" alt="金魚すくい メインビジュアル">
+            <img src="images/GoldenFish3.png" alt="金魚すくい メインビジュアル">
         </span>
 
         <!-- スクリーンショット（スライダー） -->
@@ -31,7 +31,7 @@
         <div class="swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="images/GoldenFish3.png" alt="Title">
+                    <img src="images/GoldenFishImage.png" alt="Title">
                 </div>
                 <div class="swiper-slide">
                     <img src="images/GoldenFish2.png" alt="FEVER">
