--- a/game2.html
+++ b/game2.html
@@ -58,6 +58,13 @@
             妨害してくる魚をいかに素早く掬えるかが、高得点へのカギとなります。
         </p>
 
+        <h2>開発背景</h2>
+        <p>
+           小学生のころにゲームセンターで遊んだ金魚すくいが好きで、その直感的な楽しさをもう一度形にしたいと思い制作しました。<br>
+            原体験をベースにしつつオリジナルの要素を加え、短時間で気軽に遊べるゲームとして仕上げています。<br>
+            初見でも説明なしで理解できる直感的な操作と分かりやすいルールを意識し、繰り返し遊びたくなる体験を目指しました。<br>
+        </p>
+
         <h2>開発期間</h2>
         <p>2025年5月 ～ 2025年8月12日</p>
 
@@ -80,6 +87,13 @@
         <p>
             <a href="https://youtu.be/-i0P4mB4Rvk" target="_blank" rel="noopener">
                 YouTubeで見る
+            </a>
+        </p>
+
+        <h2>プレイ</h2>
+        <p>
+            <a href="https://play.unity.com/api/v1/games/game/50998b27-87e5-427e-bfe2-0054b1d8b219/build/latest/frame" target="_blank" rel="noopener">
+                WEBでプレイ
             </a>
         </p>
 
