--- a/game2.html
+++ b/game2.html
@@ -72,8 +72,7 @@
         <p>
             本作では、単に金魚をすくうだけでなく
             「本物の金魚すくいらしさ」と「ゲームとしての気持ちよさ」の両立にこだわりました。<br>
-            魚ごとに行動パターンや速度、当たり判定を変え、<br>
-            イカやサメなどの特殊な魚は貰える時間が多かったりと<br>
+            魚ごとに行動パターンや速度、当たり判定を変え、イカやサメなどの特殊な魚は貰える時間が多かったりと<br>
             リスクとリターンがはっきりするよう設計しています。<br>
             特に魚の挙動はクラス設計で共通化し、新しい魚を追加しやすい構造にしました。<br>
             また、魚を即座に消去せず画面外へ移動させてから削除することで、
