--- a/index.html
+++ b/index.html
@@ -106,17 +106,21 @@
 							        </ul>
 							    </article>
 								<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+							        <header class="major">
+							            <h2><a href="#">はらぺこ蝶の大脱出劇</a></h2>
+										<p>SapporoGameCamp2025で制作</p>
+							        </header>
+							        <a href="#" class="image fit"><img src="images/OnchanImage.png" alt="" /></a>
+							        <p>
+									  初対面のメンバーが集まり2日間でゲームを制作するイベント<br>
+									  SapporoGameCampで制作したゲームです。<br>
+									  本作は、蝶を操作しながら食べ物を集め、角ばる／丸くなるといった形状変化を経て、<br>
+									  最終的に壁へ突進し破壊する爽快感を味わうアクションゲームです。<br>
+									</p>
+							        <ul class="actions special">
+							            <li><a href="game3.html" class="button">詳細を見る</a></li>
+							        </ul>
+							    </article>
 								<article>
 									<header>
 										<span class="date">April 14, 2017</span>
@@ -252,6 +256,7 @@
 	</body>
 
 </html>
+
 
 
 
