--- a/index.html
+++ b/index.html
@@ -110,15 +110,16 @@
 							            <h2><a href="#">はらぺこ蝶の大脱出劇</a></h2>
 										<p>SapporoGameCamp2025で制作</p>
 							        </header>
-							        <a href="#" class="image fit"><img src="images/OnchanImage.png" alt="" /></a>
+							        <a href="#" class="image fit"><img src="images/choImage.png" alt="" /></a>
 							        <p>
 									  初対面のメンバーが集まり2日間でゲームを制作するイベント<br>
 									  SapporoGameCampで制作したゲームです。<br>
-									  本作は、蝶を操作しながら食べ物を集め、角ばる／丸くなるといった形状変化を経て、<br>
-									  最終的に壁へ突進し破壊する爽快感を味わうアクションゲームです。<br>
+									  本作は、蝶を操作しながら食べ物を集め、<br>
+									  角ばる／丸くなるといった形状変化を経て、<br>
+									  最終的に壁へ突進し破壊する爽快感を味わうアクションゲームです。
 									</p>
 							        <ul class="actions special">
-							            <li><a href="game3.html" class="button">詳細を見る</a></li>
+							            <li><a href="game4.html" class="button">詳細を見る</a></li>
 							        </ul>
 							    </article>
 								<article>
@@ -256,6 +257,7 @@
 	</body>
 
 </html>
+
 
 
 
