--- a/game4.html
+++ b/game4.html
@@ -80,30 +80,22 @@
 
         <h2>こだわり</h2>
         <p>
-            開発初期のプロトタイプでは、キャラクターが出現して殴り合うだけで、戦略性やゲーム性に乏しい状態でした。<br>
-            そこで相方と何度も話し合い、少しずつルールや要素を追加してゲーム性を改善しました。<br>
-            本作では、パズルでピースを消すことでモンスターを召喚する仕組みを採用し、<br>
-            消したピースの数やソウルによって召喚されるモンスターが決まります。<br>
-            特定のピースを狙って消すことで、状況に応じたモンスターをピンポイントで召喚する必要があり、そこで戦略性を生み出しました。<br>
-            スライムはソウル1つで召喚される低コストのモンスターのため、複数ソウルで生成される「亜種モンスター」を作れない制約がありました。<br>
-            そこで代替案として、一定確率でメタルスライムが生成される仕組みを実装し、低コストのスライムにも希少性や期待感を持たせました。<br>
-            メタルスライムは通常モンスターと異なるダメージ処理を持ち、出現時に戦況が変化しやすく、プレイヤー体験の幅を広げています。<br>
-            さらにモンスター一体一体の能力を考案し、繰り返しテストプレイで攻撃力や移動速度などを調整。勝敗や使用感を基準に数値を見直し、<br>
-            運要素を残しつつ実力が反映されやすいバランスにしました。<br>
-            大砲ギミックでは発射時の反動を再現し、挙動だけでなく視覚的にも分かりやすい演出を意識しました。<br>
-            この開発を通して、試行錯誤でゲームの面白さを磨き上げ、チームで改善する重要性を学びました。<br>
+            プレイヤーの見た目変化を配列で管理し、蝶の形態が増えても柔軟に対応できる拡張性の高い設計としました。
+            また、蝶が画面外に出てしまわないよう移動範囲を制限しています。
+            他メンバーが実装した食べ物から直接利用できるよう取得処理を関数として切り出し、
+            担当間の依存を減らした構成としました。
         </p>
 
         <h2>プレイ動画</h2>
         <p>
-            <a href="https://www.youtube.com/watch?v=kgSB-JxukfI" target="_blank" rel="noopener">
+            <a href="https://youtu.be/MJKKRc57Z6o" target="_blank" rel="noopener">
                 YouTubeで見る
             </a>
         </p>
 
         <h2>GitHub</h2>
         <p>
-            <a href="https://github.com/yuma-kudo0721/KudoYuma_UnityProject_GOOOOLEM"
+            <a href="https://github.com/yuma-kudo0721/KudoYuma_UnityProject_tyou"
                target="_blank" rel="noopener">
                 UnityプロジェクトのGitHubリポジトリはこちら
             </a>
