--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 							        <p>
 									  HTB秋の大感謝祭で展示した間違い探しゲームです。<br>
 									  複数のイラストから間違いを見つけ、その数を競います。<br>
-									  問題はさまざまなパターンを用意しています。<br>
-									  イラストは全30種類を制作しました。<br>
-									  展示当日は約1,000人のお客様にご来場いただきました。
+									  問題は様々なパターンを用意していて、<br>
+									  イラストは全30種類となっています。<br>
+									  3日間では約1000人のお客様にご来場いただきました。
 									</p>
 							        <ul class="actions special">
 							            <li><a href="game3.html" class="button">詳細を見る</a></li>
@@ -257,6 +257,7 @@
 	</body>
 
 </html>
+
 
 
 
