--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 									  SapporoGameCampで制作したゲームです。<br>
 									  本作は、蝶を操作しながら食べ物を集め、<br>
 									  角ばる／丸くなるといった形状変化を経て、<br>
-									  最終的に壁へ突進し破壊する爽快感を味わうアクションゲームです。
+									  最終的に壁へ突進し破壊する爽快感を味わう<br>
+									  アクションゲームです。
 									</p>
 							        <ul class="actions special">
 							            <li><a href="game4.html" class="button">詳細を見る</a></li>
@@ -257,6 +258,7 @@
 	</body>
 
 </html>
+
 
 
 
