--- a/index.html
+++ b/index.html
@@ -124,17 +124,20 @@
 							        </ul>
 							    </article>
 								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+							        <header class="major">
+							            <h2><a href="#">StarRun</a></h2>
+										<p>JavaScriptで制作</p>
+							        </header>
+							        <a href="#" class="image fit"><img src="images/choImage.png" alt="" /></a>
+							        <p>
+									  ワンボタン操作でキャラクターをジャンプさせ、<br>
+									  迫ってくる敵を避けながらスコアを伸ばす横スクロール型アクションゲームです。<br>
+									  プレイヤーはジャンプのタイミングのみを操作してハイスコアを目指します。<br>
+									</p>
+							        <ul class="actions special">
+							            <li><a href="game4.html" class="button">詳細を見る</a></li>
+							        </ul>
+							    </article>
 								<article>
 									<header>
 										<span class="date">April 11, 2017</span>
@@ -258,6 +261,7 @@
 	</body>
 
 </html>
+
 
 
 
