--- a/index.html
+++ b/index.html
@@ -125,14 +125,16 @@
 							    </article>
 								<article>
 							        <header class="major">
-							            <h2><a href="#">StarRun</a></h2>
+							            <h2><a href="#">Star Run</a></h2>
 										<p>JavaScriptで制作</p>
 							        </header>
 							        <a href="#" class="image fit"><img src="images/choImage.png" alt="" /></a>
 							        <p>
 									  ワンボタン操作でキャラクターをジャンプさせ、<br>
-									  迫ってくる敵を避けながらスコアを伸ばす横スクロール型アクションゲームです。<br>
-									  プレイヤーはジャンプのタイミングのみを操作してハイスコアを目指します。<br>
+									  迫ってくる敵を避けながらスコアを伸ばす<br>
+									  横スクロール型アクションゲームです。<br>
+									  プレイヤーはジャンプのタイミングのみを操作して<br>
+									  ハイスコアを目指します。
 									</p>
 							        <ul class="actions special">
 							            <li><a href="game4.html" class="button">詳細を見る</a></li>
@@ -261,6 +263,7 @@
 	</body>
 
 </html>
+
 
 
 
