--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 							            <h2><a href="#">Star Run</a></h2>
 										<p>JavaScriptで制作</p>
 							        </header>
-							        <a href="#" class="image fit"><img src="images/choImage.png" alt="" /></a>
+							        <a href="#" class="image fit"><img src="images/StarImage.png" alt="" /></a>
 							        <p>
 									  ワンボタン操作でキャラクターをジャンプさせ、<br>
 									  迫ってくる敵を避けながらスコアを伸ばす<br>
@@ -137,7 +137,7 @@
 									  ハイスコアを目指します。
 									</p>
 							        <ul class="actions special">
-							            <li><a href="game4.html" class="button">詳細を見る</a></li>
+							            <li><a href="game5.html" class="button">詳細を見る</a></li>
 							        </ul>
 							    </article>
 								<article>
@@ -263,6 +263,7 @@
 	</body>
 
 </html>
+
 
 
 
