--- a/index.html
+++ b/index.html
@@ -130,11 +130,10 @@
 							        </header>
 							        <a href="#" class="image fit"><img src="images/StarImage.png" alt="" /></a>
 							        <p>
-									  ワンボタン操作でキャラクターをジャンプさせ、<br>
-									  迫ってくる敵を避けながらスコアを伸ばす<br>
-									  横スクロール型アクションゲームです。<br>
-									  プレイヤーはジャンプのタイミングのみを操作して<br>
-									  ハイスコアを目指します。
+									  	ワンボタン操作でジャンプし、<br>
+										迫ってくる敵を避けながらスコアを伸ばす<br>
+										横スクロール型2Dアクションゲームです。
+
 									</p>
 							        <ul class="actions special">
 							            <li><a href="game5.html" class="button">詳細を見る</a></li>
@@ -263,6 +262,7 @@
 	</body>
 
 </html>
+
 
 
 
