--- a/game5.html
+++ b/game5.html
@@ -22,7 +22,7 @@
 
         <!-- メインビジュアル -->
         <span class="image fit">
-            <img src="images/choImage.png" alt="GOOOOLEM メインビジュアル">
+            <img src="images/StarImage.png" alt="GOOOOLEM メインビジュアル">
         </span>
 
         <!-- スクリーンショット（スライダー） -->
@@ -34,7 +34,7 @@
                     <img src="images/star1.png" alt="Title">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/star2.png" alt="FEVER">
+                    <img src="images/Star2.png" alt="FEVER">
                 </div>
             </div>
 
@@ -49,9 +49,12 @@
           <h2>ゲーム概要</h2>
         </div>
         <p>
-            はらぺこ蝶の大脱出劇は蝶を操作して最後の壁を壊す爽快感を味わうゲームです。<br>
-            操作は左右移動のみでレーンに流れてくる食べ物を取りながら進んでいきます。<br>
-            丸い食べ物を食べると丸くなり、角ばった食べ物を食べると角ばっていきます。
+            本作は、画面左から迫ってくる敵を避けながらスコアを稼ぐ、横スクロール型の2Dアクションゲームです。<br>
+            プレイヤーはジャンプ操作のみでキャラクターを制御し、敵との衝突を避けながら生き延びることを目的とします。<br>
+            敵は時間経過やスコアに応じて出現頻度や移動速度が上昇し、ゲームが進むにつれて難易度が段階的に高くなる設計になっています。<br>
+            また、ランダムに出現するアイテムを取得することでスコアを加算でき、リスクとリターンを意識したプレイが求められます。<br>
+            衝突時にはパーティクル演出を用いたゲームオーバー演出を行い、視覚的なフィードバックを強化しました。<br>
+            シンプルな操作性とテンポの良い進行を重視し、短時間でも繰り返し遊べる体験を目指しています
         </p>
 
         <h2>開発背景</h2>
