--- a/game5.html
+++ b/game5.html
@@ -59,43 +59,38 @@
 
         <h2>開発背景</h2>
         <p>
-            Sapporo Game Camp にて、テーマ「かくちょう」をもとに<br>
-            チーム制作として本作の開発を行いました。<br>
-            私はプログラマーとして参加し、主に蝶の実装を担当しました。<br>
-            制作期間や役割が限られる中で、プロとして活動している参加者の作業進行や<br>
-            チーム内でのコミュニケーションを間近で体験し、実務を意識した開発フローを学びました。<br>
-            仕様の共有や進捗確認を意識しながら開発を進めることで、<br>
-            チーム開発における役割理解や連携の重要性を実感しました。<br>
-            この経験は、将来会社でチーム開発を行う際にも活かせると考えています。
+            本作は、JavaScriptを用いたゲーム制作に挑戦することを目的として開発しました。<br>
+            これまでUnityでのゲーム制作経験はありましたが、ブラウザ上で動作するゲームの仕組みや
+            描画・入力処理・ゲームループを自分の手で実装してみたいと考え、JavaScriptでの開発に取り組みました。<br>
+            ワンボタン操作で直感的に遊べるシンプルなルールにすることで、<br>
+            ゲームロジックや当たり判定、敵・アイテム生成、シーン管理などの基礎的な構造を理解することを重視しています。<br>
+            また、スコアに応じて難易度が変化する設計や、パーティクル演出などを実装し、少ない操作でも遊びごたえが出るよう工夫しました。<br>
+            JavaScriptでもゲームとして成立する体験を作れることを実感できた作品です。
         </p>
 
         <h2>開発期間</h2>
-        <p>2025年10月18日〜10月19日</p>
+        <p>2025年11月3日〜11月10日</p>
 
-        <h2>チーム</h2>
-        <p>7人</p>
-
-        <h2>担当</h2>
-        <p>プレイヤー（蝶）のシステム実装</p>
-
+        <h2>個人製作</h2>
+      
         <h2>こだわり</h2>
         <p>
-            プレイヤーの見た目変化を配列で管理し、蝶の形態が増えても柔軟に対応できる拡張性の高い設計としました。
-            また、蝶が画面外に出てしまわないよう移動範囲を制限しています。
-            他メンバーが実装した食べ物から直接利用できるよう取得処理を関数として切り出し、
-            担当間の依存を減らした構成としました。
-        </p>
-
-        <h2>プレイ動画</h2>
-        <p>
-            <a href="https://youtu.be/MJKKRc57Z6o" target="_blank" rel="noopener">
-                YouTubeで見る
-            </a>
-        </p>
+            本作は、JavaScriptとHTML5 Canvasでゲームを一から作ってみたいという思いから制作しました。<br>
+            操作はジャンプのみのワンボタン設計とし、誰でも直感的に遊べるシンプルさを重視しています。<br>
+            一方で、ジャンプには加速度を持たせており、入力のタイミングによって挙動が変わるため、<br>
+            単純ながらも判断力が求められるゲーム性になるよう工夫しました。<br>
+            また、スコアに応じて敵の出現頻度や移動速度が変化する仕組みを取り入れ、プレイが進むほど自然に難易度が上がる設計にしています。<br>
+            時間経過ではなく、プレイヤーの成績に応じて変化することで、緊張感が持続するよう意識しました。<br>
+            実装面では、Player・Enemy・Item・Particleなどをクラスごとに分け、更新処理・描画処理・当たり判定を整理して構成しています。<br>
+            JavaScriptでもゲームとして拡張しやすい構造を意識し、後から要素を追加しやすい設計を心がけました。<br>
+            演出面では、ゲームオーバー時に大量のパーティクルを発生させることで、失敗しても印象に残る体験になるよう工夫しています。<br>
+            また、星や月、奥行きを意識した地面のライン描画など、Canvasの基本機能だけで世界観を表現することにも挑戦しました。<br>
+            シンプルな操作性の中で、ゲームデザイン・構造設計・演出まで一通り実装した作品です。
+                    </p>
 
         <h2>GitHub</h2>
         <p>
-            <a href="https://github.com/yuma-kudo0721/KudoYuma_UnityProject_tyou"
+            <a href="https://github.com/yuma-kudo0721/KudoYuma_JavaScript_RunGame"
                target="_blank" rel="noopener">
                 UnityプロジェクトのGitHubリポジトリはこちら
             </a>
