Update and rename game6 to game6.html

--- a/game6.html
+++ b/game6.html
@@ -22,7 +22,7 @@
 
         <!-- メインビジュアル -->
         <span class="image fit">
-            <img src="images/FoxImage.png" alt="金魚すくい メインビジュアル">
+            <img src="images/FoxImage.jpg" alt="金魚すくい メインビジュアル">
         </span>
 
         <!-- スクリーンショット（スライダー） -->
@@ -31,13 +31,13 @@
         <div class="swiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="images/Fox1.png" alt="Title">
+                    <img src="images/Fox1.jpg" alt="Title">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/Fox2.png" alt="FEVER">
+                    <img src="images/Fox2.jpg" alt="FEVER">
                 </div>
                 <div class="swiper-slide">
-                    <img src="images/Fox3.png" alt="妨害">
+                    <img src="images/Fox3.jpg" alt="妨害">
                 </div>
             </div>
 
