--- a/index.html
+++ b/index.html
@@ -140,17 +140,19 @@
 							        </ul>
 							    </article>
 								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+							        <header class="major">
+							            <h2><a href="#">Fox UP</a></h2>
+										<p>Unityで初制作</p>
+							        </header>
+							        <a href="#" class="image fit"><img src="images/FoxImage.jpg" alt="" /></a>
+							        <p>
+									  	下から迫りくる水に溺れないよう、ジャンプを駆使して<br>
+							            一番上のゴールを目指すアクションゲームです。
+									</p>
+							        <ul class="actions special">
+							            <li><a href="game6.html" class="button">詳細を見る</a></li>
+							        </ul>
+							    </article>
 								<article>
 									<header>
 										<span class="date">April 7, 2017</span>
@@ -262,6 +264,7 @@
 	</body>
 
 </html>
+
 
 
 
